--- a/package.json
+++ b/package.json
@@ -34,25 +34,29 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@t3-oss/env-nextjs": "^0.12.0",
-    "@tiptap-pro/extension-emoji": "^2.17.8",
-    "@tiptap-pro/extension-file-handler": "^2.17.8",
-    "@tiptap/extension-blockquote": "^2.11.7",
-    "@tiptap/extension-bold": "^2.11.7",
-    "@tiptap/extension-bullet-list": "^2.11.7",
-    "@tiptap/extension-code-block-lowlight": "^2.11.7",
-    "@tiptap/extension-gapcursor": "^2.11.7",
-    "@tiptap/extension-history": "^2.11.7",
-    "@tiptap/extension-image": "^2.11.7",
-    "@tiptap/extension-italic": "^2.11.7",
-    "@tiptap/extension-link": "^2.11.7",
-    "@tiptap/extension-list-item": "^2.11.7",
-    "@tiptap/extension-paragraph": "^2.11.7",
-    "@tiptap/extension-placeholder": "^2.11.7",
-    "@tiptap/extension-text-align": "^2.11.7",
-    "@tiptap/extension-youtube": "^2.11.7",
-    "@tiptap/pm": "^2.11.7",
-    "@tiptap/react": "^2.11.7",
-    "@tiptap/starter-kit": "^2.11.7",
+    "@tiptap/core": "^3.10.5",
+    "@tiptap/extension-blockquote": "^3.10.5",
+    "@tiptap/extension-bold": "^3.10.5",
+    "@tiptap/extension-bullet-list": "^3.10.5",
+    "@tiptap/extension-code-block-lowlight": "^3.10.5",
+    "@tiptap/extension-emoji": "^3.10.5",
+    "@tiptap/extension-file-handler": "^3.10.5",
+    "@tiptap/extension-gapcursor": "^3.10.5",
+    "@tiptap/extension-highlight": "^3.10.5",
+    "@tiptap/extension-history": "^3.10.5",
+    "@tiptap/extension-image": "^3.10.5",
+    "@tiptap/extension-italic": "^3.10.5",
+    "@tiptap/extension-link": "^3.10.5",
+    "@tiptap/extension-list-item": "^3.10.5",
+    "@tiptap/extension-paragraph": "^3.10.5",
+    "@tiptap/extension-placeholder": "^3.10.5",
+    "@tiptap/extension-text-align": "^3.10.5",
+    "@tiptap/extension-text-style": "^3.10.5",
+    "@tiptap/extension-typography": "^3.10.5",
+    "@tiptap/extension-youtube": "^3.10.5",
+    "@tiptap/pm": "^3.10.5",
+    "@tiptap/react": "^3.10.5",
+    "@tiptap/starter-kit": "^3.10.5",
     "@uploadthing/react": "^7.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
