--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@tiptap/extension-text-style": "^3.10.5",
     "@tiptap/extension-typography": "^3.10.5",
     "@tiptap/extension-youtube": "^3.10.5",
+    "@tiptap/markdown": "^3.10.5",
     "@tiptap/pm": "^3.10.5",
     "@tiptap/react": "^3.10.5",
     "@tiptap/starter-kit": "^3.10.5",
