--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.1.0",
     "tippy.js": "^6.3.7",
     "tw-animate-css": "^1.2.5",
