--- a/package.json
+++ b/package.json
@@ -65,12 +65,12 @@
     "drizzle-seed": "^0.3.1",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.487.0",
-    "next": "^15.3.6",
+    "next": "16.0.10",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-hook-form": "^7.55.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.1.0",
@@ -83,11 +83,11 @@
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "^20.17.30",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "drizzle-kit": "^0.30.5",
     "eslint": "^9.23.0",
-    "eslint-config-next": "^15.2.3",
+    "eslint-config-next": "16.0.10",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
@@ -99,5 +99,9 @@
   "ct3aMetadata": {
     "initVersion": "7.39.2"
   },
-  "packageManager": "npm@11.2.0"
+  "packageManager": "npm@11.2.0",
+  "overrides": {
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
+  }
 }
